--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="TestResource.cpp" />
     <ClCompile Include="TestResourceDelete.cpp" />
     <ClCompile Include="TestResourceLoad.cpp" />
+    <ClCompile Include="Util\TestIterators.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseLib\BaseLib.vcxproj">
