--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -1626,6 +1626,9 @@ xcopy /S /Y /I /D "$(ProjectDir)Tools" "$(OutDir)Tools"</Command>
     <ProjectReference Include="..\SCICompanionLib\SCICompanionLib.vcxproj">
       <Project>{761de01c-57f6-45c5-aafc-ac48000c423f}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\ThirdPartyLibraries\ThirdPartyLibraries.vcxproj">
+      <Project>{b19c8dc1-b2a9-484d-90c4-c1c3b9683ebc}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
